--- a/src/components/Intro/index.scss
+++ b/src/components/Intro/index.scss
@@ -1,5 +1,5 @@
 .introDiv{
-  height: 95vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -9,7 +9,7 @@
 .intro{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   width: 55%;
   height: 80%;
@@ -32,20 +32,91 @@
 
 }
 
-.social{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 50px;
+.wrapper {
+  display: inline-flex;
+  list-style: none;
 
-  a{
-    text-decoration: none;
-    width: 5%;
-    margin: 0 20px;
+  .linkedin:hover .tooltip,
+  .linkedin:hover .tooltip::before {
+    background: #1877F2;
+    color: #ffffff;
+  }
+
+  .instagram:hover .tooltip,
+  .instagram:hover .tooltip::before {
+    background: #E4405F;
+    color: #ffffff;
+  }
+
+  .github:hover .tooltip,
+  .github:hover .tooltip::before {
+    background: #333333;
+    color: #ffffff;
+  }
+
+  .icon {
+    position: relative;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 5px;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    color: white;
     
-    img{
-      max-width: 100%;
+    a{
+      text-decoration: none;
+      img{
+        max-width: 100%;
+      }
+    }
+
+    &:hover{
+      .tooltip {
+        top: -45px;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+      }
+
+      span{
+        text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+        
+      }
+    } 
+  }
+
+  .tooltip {
+    position: absolute;
+    top: 0;
+    font-size: 14px;
+    background: #ffffff;
+    color: #ffffff;
+    padding: 5px 8px;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+    &::before {
+      position: absolute;
+      content: "";
+      height: 8px;
+      width: 8px;
+      background: #ffffff;
+      bottom: -3px;
+      left: 50%;
+      transform: translate(-50%) rotate(45deg);
+      transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
   }
 }
