--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,127 +1,52 @@
 .navbar {
-  position: fixed;
-  margin: auto 0;
-  z-index: 1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  overflow-x: hidden;
-  transition: 0.5s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  .left-side{
-    height: 100%;
-    width: 60px;
-    position: absolute;
-    background-color: #241b51;
-  }
+  overflow: hidden;
+  background-color: #17161d;
   
-  .animated {
-    background-image: linear-gradient(to left, #17082e, #241b51);
-    position: relative;
-    display: inline-block;
-    padding: 15px;
-    border-radius: 10px;
-    color: #d2bdff;
-    text-decoration: none;
-    text-transform: uppercase;
+
+  .icon {
+    display: none;
+  }
+
+  a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
-    overflow: hidden;
-    margin: 10px;
-    filter: hue-rotate(0deg);
-    border: 2px solid #d2bdff;
-    transition: all 0.1s linear;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+
+    &.active {
+      background-color: #6610f2;
+      color: white;
+    }
 
     &:hover {
-      color: #f1f1f1;
-      border: 1px solid transparent;
-      span {
-        position: absolute;
-        display: block;
-
-        &:nth-child(1) {
-          filter: hue-rotate(0deg);
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 3px;
-          background: linear-gradient(90deg, transparent, #3a86ff);
-          animation: animate1 1s linear infinite;
-        }
-        @keyframes animate1 {
-          0% {
-            left: -100%;
-          }
-          50%,
-          100% {
-            left: 100%;
-          }
-        }
-
-        &:nth-child(2) {
-          filter: hue-rotate(60deg);
-          top: -100%;
-          right: 0;
-          width: 3px;
-          height: 100%;
-          background: linear-gradient(180deg, transparent, #3a86ff);
-          animation: animate2 1s linear infinite;
-          animation-delay: 0.25s;
-        }
-
-        @keyframes animate2 {
-          0% {
-            top: -100%;
-          }
-          50%,
-          100% {
-            top: 100%;
-          }
-        }
-        &:nth-child(3) {
-          filter: hue-rotate(120deg);
-          bottom: 0;
-          right: 0;
-          width: 100%;
-
-          background: linear-gradient(270deg, transparent, #3a86ff);
-          animation: animate3 1s linear infinite;
-          animation-delay: 0.5s;
-        }
-        @keyframes animate3 {
-          0% {
-            right: -100%;
-            height: 3px;
-          }
-          50%,
-          100% {
-            height: 2px;
-            right: 100%;
-          }
-        }
-
-        &:nth-child(4) {
-          filter: hue-rotate(300deg);
-          bottom: -100%;
-          left: 0;
-          width: 3px;
-          height: 100%;
-          background: linear-gradient(360deg, transparent, #3a86ff);
-          animation: animate4 1s linear infinite;
-          animation-delay: 0.75s;
-        }
-        @keyframes animate4 {
-          0% {
-            bottom: -100%;
-          }
-          50%,
-          100% {
-            bottom: 100%;
-          }
-        }
-      }
+      background-color: #ddd;
+      color: black;
     }
+
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child) {display: none;}
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar.responsive {position: relative;}
+  .navbar.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
