--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,7 +2,6 @@ html, body{
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 body{
@@ -11,23 +10,10 @@ body{
     font-size: 10pt;
 }
 
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background:  linear-gradient(180deg, #17161d 0%, #6610f2 100%); 
-    border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(180deg, #26065a 0%, #17161d 100%); 
+.item {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  background-color: #ecf0f1;
+  border-bottom: 1px solid #ccc;
 }
