--- a/src/components/Intro/index.scss
+++ b/src/components/Intro/index.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(18, 4, 40);
+  background: rgb(2,0,36);
 }
 
 .intro{
