--- a/src/components/Intro/index.scss
+++ b/src/components/Intro/index.scss
@@ -1,12 +1,4 @@
-.introDiv{
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background: rgb(2,0,36);
-}
-
-.intro{
+.introContent{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
