--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,7 +1,67 @@
-.aboutDiv{
-  height: 95vh;
+.container{
+  position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
-  background-color: #0e091b;
+  flex-wrap: wrap;
+  z-index: 1;
+}
+
+.container .card{
+  position: relative;
+  width: 25%;
+  height: 75vh;
+  margin: 5vh;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  background: #17161d;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #6610f2;
+  
+  backdrop-filter: blur(5px);
+}
+
+.container .card .content{
+  padding: 15px;
+  text-align: center;
+  transition: 0.5s;
+}
+
+.container .card .content h2{
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  font-size: 2em;
+  color: rgba(255, 255, 255, 0.4);
+  pointer-events: none;
+}
+
+.container .card .content h3{
+  font-size: 1.8em;
+  color: #fff;
+  z-index: 1;
+}
+
+.container .card .content p{
+  line-height: 1.5rem;
+  color: #fcfcfc;
+  font-family: "Saira";
+  font-size: 1.2rem;
+  text-align: justify;
+}
+
+.container .card .content a{
+  position: relative;
+  display: inline-block;
+  padding: 8px 20px;
+  margin-top: 15px;
+  background: #fff;
+  color: #000;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: 500;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
